
[package]
name = "rdx-stderr" # Needs to be a unique name on crates.io!
version = "0.4.0"
edition = "2024"
authors = ["qodeninja <1043235+qodeninja@users.noreply.github.com>"]
description = "The Rustadex Stderr Package. An opinionated, ergonomic library for pretty-okay CLI terminal output, made of sticks bubble gum and vintage bash scripts."
license = "MIT" # Or "Apache-2.0" - choose an open-source license.
repository = "https://github.com/rustadex/stderr" # Link to its future GitHub repo
readme = "README.md"
keywords = ["rdx", "rustadex", "ninja", "qode", "cli", "terminal", "logger", "color", "ui"]
categories = ["command-line-interface"]

[lib]
path = "src/lib.rs"

[dependencies]
# log = "0.4" ~ not yet
termcolor = "1.4"
function_name = "0.3" #tracer
terminal_size = "0.3"
strum = "0.26"
strum_macros = "0.26"


